@@ -1,6 +1,7 @@
 04-Jun-2015 Laurent Duflot
 	* ZeroLeptonNTVars, PhysObjProxies, PhysObjProxyFiller,
 	PhysObjProxyUtils, BuildSUSYObjects, ZeroLeptonSR, LinkDef.h: add taus
+	* SR, CR, PhysObjProxies, PhysObjProxyUtils: code cleanup
 
 
 03-Jun-2015 Laurent Duflot
